[package]
name = "chaos_helper"
version = "0.1.0"
authors = ["최재용 <jayong93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
winit = "0.22.1"
anyhow = "1.0.28"
helper = {path = "helper"}
tui = {version="0.9.1", default-features = false, features=["crossterm"]}
crossterm = "0.17.4"
clipboard = "0.5.0"
lazy_static = "1.4.0"
dirs = "2.0.2"

[dependencies.winapi]
version = "0.3.8"
features = ["winuser"]
