[package]
name = "chaos_helper"
version = "0.2.0"
authors = ["최재용 <jayong93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
winit = "0.22.1"
anyhow = "1.0.28"
helper = {path = "helper"}
lazy_static = "1.4.0"
dirs = "2.0.2"
regex = "1.3.7"
iced = "0.1.1"
iced_native = "0.2.2"
font-loader = "0.9.0"

[dependencies.winapi]
version = "0.3.8"
features = ["winuser"]
