[package]
name = "chaos_helper"
version = "0.3.0"
authors = ["최재용 <jayong93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
winit = "*"
anyhow = "1.0.28"
helper = {path = "helper"}
lazy_static = "1.4.0"
dirs = "2.0.2"
regex = "1.3.7"
iced = {git = "https://github.com/jayong93/iced", branch = "device_event"}
iced_native = {git = "https://github.com/jayong93/iced", branch = "device_event"}
font-loader = "0.9.0"
serde_json = "1.0.52"
serde = "^1.0"

[dependencies.winapi]
version = "0.3.8"
features = ["winuser"]
