[package]
name = "helper"
version = "0.1.0"
authors = ["최재용 <jayong93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "helper"

[dependencies]
reqwest = "0.9.22"
lazy_static = "1.4.0"
serde = {version="1.0.101", features=["derive"]}
regex = "1.3.1"
either = "1.5.3"
rodio = "0.9.0"
anyhow = "1.0.28"
serde_json = "1.0.52"
strum = "0.18.0"
strum_macros = "0.18.0"
